# floorplan2openscad

./: .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  categories.py  cspell.json  floorplan2openscad.inx  floorplan2openscad.py  floorplan_add_layer.inx  floorplan_add_layer.py  floorplan_add_ruler.inx  floorplan_add_ruler.py  geometry.py  layer_naming.py  mesh_repair.py  mesh_validator.py  openscad_writer.py  output_paths.py  pyproject.toml  ruler.py  svg_parser.py
.github/workflows/: ci.yml  release.yml
tests/: test_categories.py  test_floorplan_add_layer_inx.py  test_floorplan_add_ruler_inx.py  test_geometry.py  test_layer_naming.py  test_mesh_repair.py  test_mesh_validator.py  test_openscad_writer.py  test_output_paths.py  test_ruler.py  test_templates.py
