[project]
name = "floorplan2openscad"
version = "0.1.0"
requires-python = ">=3.12"
# inkex is intentionally absent: it is bundled with Inkscape and cannot be
# pip-installed without system Cairo/pkg-config headers. svg_parser.py needs
# it at runtime but geometry, categories, mesh_validator, and openscad_writer
# are pure Python, so the test suite runs without Inkscape installed.
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "pre-commit>=4.0",
]
# The `inkex` package itself still can't be pip-installed (see note above),
# but its runtime imports (numpy, lxml, Pillow, tinycss2, pyserial,
# cssselect) are pure-pip and don't need Cairo. Installing this group lets
# `make convert` run floorplan2openscad.py with `PYTHONPATH` pointed at
# Inkscape's bundled `inkex` source instead of Inkscape's own interpreter.
inkex-runtime = [
    "numpy",
    "lxml",
    "pillow",
    "tinycss2",
    "pyserial",
    "cssselect",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = [
    "categories",
    "geometry",
    "mesh_repair",
    "mesh_validator",
    "openscad_writer",
    "svg_parser",
    "floorplan2openscad",
    "layer_naming",
    "floorplan_add_layer",
    "ruler",
    "floorplan_add_ruler",
]
omit = ["tests/*"]

[tool.ruff]
line-length = 130
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
